# contextbox

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
contextbox/: __init__.py  data_export_import.py  database.py  main.py  notification_system.py  semantic_search.py  utils.py
contextbox/extractors/: __init__.py  wikipedia.py
contextbox/llm/: __init__.py  config.py  github_models.py  qa.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CodeBlock.jsx  Header.jsx  Sidebar.jsx
frontend/src/pages/: ApiReference.jsx  Commands.jsx  Demo.jsx  Home.jsx  Installation.jsx
frontend/src/styles/: globals.css
jhunguntutool/: ADVANCED_SEARCH_IMPLEMENTATION_SUMMARY.md  QA_SYSTEM_IMPLEMENTATION_SUMMARY.md  conftest.py  contextbox_search_cli.py  demo_advanced_search.py  demo_export.csv  demo_export.json  demo_export.txt  final_test.py  integration_examples.py  search.py  search_api_example.py  sitecustomize.py  test_advanced_features.py  test_enhanced_cli.py  test_implementation.py  test_qa_system.py  test_screenshot.py  test_search_comprehensive.TestSearchEngine.temp_dir???  test_search_comprehensive.py  test_summary.json  test_summary.md  test_summary.text
jhunguntutool/contextbox/: CLI_MIGRATION_COMPLETE.md  CLI_MIGRATION_SUMMARY.md  CONFIGURATION_MANAGEMENT.md  CONFIGURATION_SUMMARY.md  CONTENT_EXTRACTION_CONFIG.md  ENHANCEMENT_SUMMARY_REPORT.md  EXTRACTORS_README.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_ENHANCEMENTS.md  LLM_BACKEND_README.md  LLM_IMPLEMENTATION_SUMMARY.md  PHASE_4_5_ENHANCEMENTS_COMPLETE.md  README.md  WEBPAGE_EXTRACTION_README.md  WIKIPEDIA_IMPLEMENTATION.md  YOUTUBE_EXTRACTOR_README.md  check_dependencies.sh  click_cli.py  click_cli_enhanced.py  config_development.json  config_example.json  config_production.json  content_extraction_examples.py  demo_complete_system.py  demo_enhanced_cli.py  demo_phase2.py  demo_qa.py  demo_qa_simple.py  demo_wikipedia.py  demo_youtube_extractor.py  example_llm_backend.py  install_enhanced.sh  install_master.sh  install_ubuntu.sh  performance_optimizations.py  privacy_mode.py  requirements.txt  setup.py  setup_wizard.py  (+21 more)
jhunguntutool/contextbox/artifacts/: capture_6.json
jhunguntutool/contextbox/contextbox/: __main__.py  capture.py  cli.py  config.py  extractors.py  llm_config_example.json
jhunguntutool/contextbox/contextbox/extractors/: classifier.py  enhanced_extractors.py  webpage.py  youtube.py
jhunguntutool/contextbox/contextbox/llm/: IMPLEMENTATION_SUMMARY.md  README.md  SUMMARIZATION_README.md  __init__.py  (+7 more)
jhunguntutool/contextbox/tests/: __init__.py  test_contextbox.py
(+4 files in other folders)
