[project]
name = "contextbox"
version = "1.0.0"
description = "AI-powered context capture and organization tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jay Hemnani", email = "jayhemnani9910@gmail.com"}
]
keywords = [
    "context",
    "capture",
    "ai",
    "llm",
    "screenshot",
    "ocr",
    "extraction",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pillow>=10.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",  # For GitHub Models (OpenAI-compatible API)
]
ocr = [
    "pytesseract>=0.3",
]
youtube = [
    "yt-dlp",
    "youtube-transcript-api",
]
all = [
    "openai>=1.0",
    "pytesseract>=0.3",
    "yt-dlp",
    "youtube-transcript-api",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
contextbox = "contextbox.cli:cli"

[project.urls]
Homepage = "https://github.com/jayhemnani9910/contextbox"
Documentation = "https://jayhemnani9910.github.io/contextbox"
Repository = "https://github.com/jayhemnani9910/contextbox"
Issues = "https://github.com/jayhemnani9910/contextbox/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextbox"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=contextbox --cov-report=term-missing"
